src/test/deca/context/valid/13_modulo.deca
// Description:
//    Test modulo
//
// Résultats:
//
//
// Historique:
//    cree le 16/01/2022

{
        int x = 17%3;
}
