src/test/deca/context/invalid/1_booleanModulo.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: NotIntType
// 
// Historique:
//    cree le 01/01/2022

{

   // Doit etre refuse.
   int i = 30 % 3.2;
}
